# dpm-toolkit

./: .gitignore  CLAUDE.md  DATE_FORMAT_ANALYSIS.md  README.md  REFACTORING_PLAN.md  analysis-viewer.html  analyze_dates.py  date_format_analysis.json  pyproject.toml
.github/workflows/: analyze-all-versions.yml  analyze-database.yml  build-all-versions.yml  build-database.yml  build-dpm2.yml  ci.yml  claude-code-review.yml  compare-databases.yml  compare-previous.yml  download-access-engine.yml  download-database.yml  generate-schema.yml  get-new-download-urls.yml  migrate-database.yml  publish-archive.yml  publish-database-files.yml  publish-dpm-toolkit.yml  publish-dpm2.yml  publish-dpmlite.yml  run-lint.yml  run-tests.yml  run-type-check.yml  update-dpm2-models.yml
analysis-results/: 3.2-sample.json  3.5-sample.json  4.0-release.json  4.1-errata-1.json
projects/analysis/: README.md  WORKFLOW.md  pyproject.toml
projects/analysis/src/analysis/: __init__.py  inference.py  main.py  pattern_mining.py  reporting.py  statistics.py  types.py
projects/analysis/src/analysis/templates/: report.md
projects/analysis/tests/: test_inference.py  test_main.py  test_pattern_mining.py  test_statistics.py  test_types.py
projects/archive/: pyproject.toml
projects/archive/src/archive/: __init__.py  download.py  versions.py  versions.toml
projects/archive/tests/: test_archive_placeholder.py  test_download.py  test_placeholder.py  test_versions.py
projects/compare/: README.md  pyproject.toml
projects/compare/src/compare/: __init__.py  comparator.py  comparison.py  index.py  inspection.py  inspector.py  main.py  query.py  types.py
projects/compare/src/compare/templates/: report.html  scripts.js  styles.css
projects/compare/tests/: test_debug_multi_row.py  test_debug_ordering.py  test_debug_rowguid.py  test_different_columns_edge_cases.py  test_inspector.py  test_main_pure_functions.py  test_null_rowguid_edge_case.py  test_real_world_case.py  test_streaming_equivalence.py
projects/diagram/: README.md  pyproject.toml
projects/diagram/src/diagram/: __init__.py  html_export.py  main.py  schema_types.py
projects/diagram/tests/: __init__.py  test_main.py
projects/diagram/webapp/: index.html
projects/diagram/webapp/css/: styles.css
projects/diagram/webapp/js/: app.js  diagram.js
projects/dpm2/: README.md  pyproject.toml
projects/dpm2/src/dpm2/: __init__.py  base.py  models.py  types.py  utils.py
projects/dpm2/tests/: __init__.py  conftest.py  test_data.py  test_package.py  test_schema.py
projects/dpmlite/: README.md  build_db.py  filter_db.py  pyproject.toml
projects/dpmlite/src/dpmlite/: __init__.py  models.py  tables.py  utils.py
projects/migrate/: pyproject.toml
projects/migrate/src/migrate/: __init__.py  main.py  processing.py  transformations.py  type_registry.py  value_casters.py
projects/migrate/tests/: __init__.py  test_migrate_placeholder.py  test_processing.py  test_transformations.py  test_type_registry.py  test_value_casters.py
projects/schema/: README.md  pyproject.toml
projects/schema/src/schema/: __init__.py  enum_detection.py  generation.py  html_export.py  main.py  sqlalchemy_export.py  type_conversion.py  type_registry.py  types.py
projects/schema/src/schema/templates/: diagram.css  diagram.html  diagram.js
projects/schema/tests/: __init__.py  test_enum_detection.py  test_foreign_key_quoting.py  test_migrate_integration.py  test_reflection_integration.py  test_registry_base_class.py  test_uuid_detection.py
projects/scrape/: pyproject.toml
projects/scrape/src/scrape/: __init__.py  __main__.py  scraper.py
projects/scrape/tests/: __init__.py  test_placeholder.py  test_scrape_placeholder.py  test_scraper.py
src/dpm_toolkit/: cli.py
tests/: __init__.py  test_cli_placeholder.py
