[project]
name = "compare"
version = "0.0.0"
description = "Database comparison for DPM Toolkit"
authors = [{ name = "Jim Lundin", email = "jimeriklundin@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["jinja2>=3.1.0"]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
