[project]
name = "dpmlite"
version = "0.0.0"
description = "Lightweight subset of DPM 2.0 focused on report structure, table layout, and validation rules"
authors = [{ name = "Jim Lundin", email = "jimeriklundin@gmail.com" }]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = ["sqlalchemy>=2.0.37"]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
