[project]
name = "migrate"
version = "0.1.0"
description = "Database migration tools for converting Access to SQLite"
authors = [{ name = "Jim Lundin", email = "jimeriklundin@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["sqlalchemy>=2.0.37", "sqlalchemy-access>=2.0.3"]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201"]

[tool.ruff.lint.per-file-ignores]
"**/test*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "PLC0415", # imports at function level for test helpers
]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
